--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <!-- Custom Javascript -->
   <script src="js/script.js"></script>
+  <script type="text/javascript" src="//counter.websiteout.com/js/35/5/0/0"></script>
 </body>
 
 </html>
