--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a href="https://github.com/Aditidubey223" target="_blank"><i class="bx bxl-github"></i></a>
         <a href="https://www.instagram.com/iamaditidubey__/" target="_blank"><i class="bx bxl-instagram"></i></a>
       </div>
-      <a download href="./Resume.pdf" class="btn" target="_blank">Download Resume</a>
+      <a download href="./Image/aditi.pdf" class="btn" target="_blank">Download Resume</a>
     </div>
     <div class="home-image">
       <img src="Image/1st.jpeg" alt="" />
@@ -180,7 +180,6 @@
   <script src="https://unpkg.com/scrollreveal"></script>
   <!-- Custom Javascript -->
   <script src="js/script.js"></script>
-  <script type="text/javascript" src="//counter.websiteout.com/js/35/5/0/0"></script>
 </body>
 
 </html>
