--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
     <div class="home-content">
       <h3>Hello, It's Me</h3>
       <h1>Aditi Dubey</h1>
-      <h3>And I'm a <span> Graphic Designer </span></h3>
-      <p>An aspiring Graphic Designer</p>
+      <h3>And I'm a <span> Graphics Designer / UI/UX Developer </span></h3>
+      <p>An aspiring Graphics Designer</p>
       <p>
-        Graphic Designer at @AlgoTutor @codein community @coders evoke <br />
+        Graphics Designer at @AlgoTutor @codein community @coders evoke <br />
       </p>
       <div class="social-media">
         <a href="https://www.linkedin.com/in/aditidubey/" target="_blank"><i class="bx bxl-linkedin"></i></a>
@@ -53,7 +53,7 @@
     </div>
     <div class="about-content">
       <h2 class="heading">About <span> me </span></h2>
-      <h3>Graphic Designer</h3>
+      <h3>Graphics Designer</h3>
       <p>
         👋 Hello! I'm Aditi Dubey, a final year Bachelor of Engineering student in
         <br /> Information Technology, with a passion for UI/UX, Android development,
