--- a/index.html
+++ b/index.html
@@ -150,6 +150,31 @@
           <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
         </div>
       </div>
+      <div class="portfolio-box">
+        <img src="./Image/thubmbnail.jpeg" alt="" />
+        <div class="portfolio-layer">
+          <h4>Room Booking App</h4>
+          <p>
+            Developed an Android application using Java and Firebase for easy room booking. -
+            Implemented frontend components using Android Studio and XML to create a
+            user-friendly interface
+          </p>
+          <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+        </div>
+      </div>
+      <div class="portfolio-box">
+        <img src="./Image/thubmbnail.jpeg" alt="" />
+        <div class="portfolio-layer">
+          <h4>Book Buying App</h4>
+          <p>
+            Created a user-friendly interface and implemented book search,
+            purchase functionalities. Utilized Firebase Realtime Database forreal-time updates
+            on book availability.
+
+          </p>
+          <a href="#" target="_blank"><i class="bx bx-link-external"></i></a>
+        </div>
+      </div>
     </div>
   </section>
   <section class="contact" id="contact">
